package modelos;

public enum EstadoOrden {
    PENDIENTE,
    CONFIRMADA,
    CANCELADA
}
