package usuarios;

public abstract class Usuario {
    private String nombre;
    private String email;

    public Usuario() {}

    public Usuario(String nombre, String email) {
        this.nombre = nombre;
        this.email = email;
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public void autenticar() {
        // implementación simple de ejemplo
        System.out.println("Autenticando usuario: " + nombre + " <" + email + ">");
    }
}
